# ha-tsuryphone-new

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENT_HELP.md  INTEGRATION_DESIGN_PROGRESS.md  README.md  hacs.json  pyproject.toml  requirements-dev.txt
.github/workflows/: auto-release-on-push.yml  ci.yml  hacs-validation.yml  pr.yml  release.yml
custom_components/tsuryphone/: __init__.py  api_client.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  device_condition.py  device_trigger.py  diagnostics.py  dialing.py  generate_service_json.py  manifest.json  models.py  notifications.py  number.py  resilience.py  select.py  sensor.py  services.py  services.yaml  storage_cache.py  strings.json  switch.py  text.py  validation.py  webhook_helpers.py  websocket.py
custom_components/tsuryphone/translations/: en.json
